# NILMbench

./: .gitignore  CITATION.cff  LICENSE  README.md  pyproject.toml
docs/: TESTING_GUIDE.md  data_preparation.md
examples/: byom_demo.pt  byom_demo.py  byom_random.py  byom_template.py
huggingface_space/: README.md  app.py  requirements.txt
huggingface_space/examples/: .gitkeep  baseline_evening.json  baseline_evening.npy  cooking_event.json  cooking_event.npy  dishwasher_event.json  dishwasher_event.npy
huggingface_space/model/: .gitkeep
nilmbench/: __init__.py  benchmark.py  cli.py  metrics.py  postprocess.py  runner.py
nilmbench/data/: __init__.py  dataset.py  fetch.py  prepare.py  transforms.py
nilmbench/io/: __init__.py  report.py
nilmbench/models/: __init__.py  base.py  cold.py  deepdfml.py  faustine.py  schirmer.py
scripts/: calibrate_cutoffs.py  evaluate_dense.py  reproduce_figures.py  train_baseline.py
tests/: conftest.py  test_benchmark.py  test_end_to_end.py  test_metrics.py  test_runner.py
