[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "nilmbench"
version = "0.1.0"
description = "NILMbench: a high-frequency NILM regression benchmark on UK-DALE."
readme = "README.md"
license = { file = "LICENSE" }
requires-python = ">=3.10"
authors = [
    { name = "Sahar Moghimian Hoosh" },
    { name = "Ilia Kamyshev", email = "ilia.kamyshev@outlook.com" },
    { name = "Javier Penuela" },
    { name = "Farhat Mahmood" },
    { name = "Tareq Al-Ansari" },
    { name = "Henni Ouerdane", email = "h.ouerdane@skoltech.ru" },
]
keywords = ["NILM", "energy disaggregation", "benchmark", "UK-DALE"]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: Science/Research",
    "License :: OSI Approved :: MIT License",
    "Programming Language :: Python :: 3",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Scientific/Engineering",
]
dependencies = [
    "numpy>=1.24",
    "pandas>=2.0",
    "scipy>=1.10",
    "scikit-learn>=1.3",
    "torch>=2.1",
    "h5py>=3.9",
    "soundfile>=0.12",
    "tqdm>=4.65",
    "matplotlib>=3.7",
    "pyyaml>=6.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=7.4",
    "pytest-cov>=4.1",
    "ruff>=0.4",
    "ipykernel>=6.25",
]
ui = [
    "gradio>=4.0",
]

[project.scripts]
nilmbench = "nilmbench.cli:main"

[project.urls]
Homepage = "https://github.com/Saharmgh/nilmbench"
Issues = "https://github.com/Saharmgh/nilmbench/issues"

[tool.setuptools.packages.find]
include = ["nilmbench*"]

[tool.ruff]
line-length = 100
target-version = "py310"
